# zzz_sonda

./: .gitmodules  CMakeLists.txt  README.md
android/app/src/main/cpp/: main.cpp
core/: CMakeLists.txt
core/assets/raw/: Sprite-0001.aseprite  barometer.aseprite  sonda.aseprite  sun.aseprite  temp.aseprite
core/include/: barometer.h  battery.h  camera_controller.h  game.h  noise.h  sea.h  sonda.h  sonda_game.h  sun_and_moon.h  temperature_meter.h
core/src/: barometer.cpp  battery.cpp  game.cpp  noise.cpp  sea.cpp  sonda.cpp  sonda_game.cpp  sun_and_moon.cpp  temperature_meter.cpp
desktop/: main.cpp
